# M-Attack-V2

./: .gitignore  Dockerfile  README.md  benchmark.py  blackbox_text_generation.py  config_schema.py  generate_ad_sample_parallel.py  generate_ad_samples.py  gpt_evaluate.py  keyword_matching_gpt.py  m_attack_v2.py  pyproject.toml  requirements.txt  retrieval.py  run_parallel.sh  run_pipeline.sh  utils.py
attack/: __init__.py  base.py
config/: ensemble_3models.yaml
docs/: README.md  hyperparameters.md  retrieval.md
surrogates/: __init__.py  loss.py
surrogates/FeatureExtractors/: __init__.py  base.py  blip1.py  blip2.py  clip.py  dino.py  vit.py
