[project]
name = "m-attack-v2-github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.78.0",
    "gdown>=5.2.1",
    "google-genai>=1.62.0",
    "hydra-core>=1.3.2",
    "nltk>=3.9.2",
    "openai>=2.17.0",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "pytorch-lightning>=2.6.1",
    "salesforce-lavis>=1.0.2",
    "scipy>=1.17.0",
    "timm>=0.4.12",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.26.1",
    "wandb>=0.24.2",
]
